src/stylesheets/components/tag/_list.scss
//
// Tag list
// --------------------------------------------------

.tag.list {
  .icon-tag {
    &:not([class*="color"]) {
      .color {
        color: $icon-tag-color;
      }

      .border {
        color: $icon-tag-border;
      }
    }
  }

  #sidebar & {
    .active {
      background: $tag-list-active-bg;

      .icon-tag:not([class*="color"]) {
        .color {
          color: $tag-list-active-bg;
        }

        .border {
          color: $tag-list-active-border;
        }
      }

      &:focus {
        background: $tag-list-focus-bg;
        color: $tag-list-focus-color;

        .icon-tag {
          &:not([class*="color"]) {
            .color {
              color: $tag-list-focus-bg;
            }
          }

          .border {
            color: $tag-list-focus-color;
          }
        }
      }
    }
  }

  .panel & {
    flex: 1 1 0;
    overflow-y: scroll;
    padding: $space-min 0 0;
    position: relative;

    li {
      display: flex;
      align-items: center;
      height: $line-height-large;
      padding: 0 $default-padding-horizontal;

      &.mixed {
        color: $mixed-color;

        .icon-tag {
          opacity: 0.5;
        }

        &:focus {
          .icon-pluscircles {
            display: block;
          }

          .icon-tag {
            opacity: 1;
          }
        }
      }

      &:focus {
        background: $tag-list-focus-bg;

        &,
        .icon {
          color: $tag-list-focus-color;
        }

        .icon-tag {
          &:not([class*="color"]) {
            .color {
              color: $tag-list-focus-bg;
            }
          }

          .border {
            color: $tag-list-focus-color;
          }
        }
      }

      .icon-pluscircles {
        display: none;
      }
    }

    .icon-tag {
      margin-right: $space-xs;
    }

    .name {
      margin-right: auto;

      & + .btn-icon {
        margin-left: $space-min - $shim;
      }
    }
  }
}

.add-tag-container {
  flex: 0 0 auto;
  padding-bottom: 2px;

  .editable-control {
    left: $default-padding-horizontal;
    width: calc(100% - 2 * #{$default-padding-horizontal});
    height: $input-height-base;
    background: $add-tag-default-bg;
    cursor: default;
    border: 1px solid $add-tag-border-color; // Reset to form-control, tweak border color for panel bg
    margin: 0; // Reset to form-control
    padding: 0 $padding-base-horizontal; // Reset to form-control

    &::-webkit-input-placeholder {
      color: $add-tag-placeholder-color-default;
      position: relative;
      left: 50%;
      transform: translateX(-27px);
      transition:
        left $add-tag-transition,
        transform $add-tag-transition,
        color $add-tag-transition;
    }

    &:focus {
      cursor: auto;
      background: $add-tag-focus-bg;
      border-color: $input-color-focus; // Reset to form-control
      box-shadow: 0 0 0 2px $input-color-focus, 0 0 0 2px $panel-bg;

      &::-webkit-input-placeholder {
        left: 0;
        transform: translateX(0);
        color: $input-color-placeholder;
      }
    }
  }
}

